# HaGameLiteEditor

./: CMakeLists.txt  main.cpp
assets/shaders/: color.frag  texture.frag
cmake/: FindHaGame2.cmake
public/: CMakeCache.txt  HaGameLite.js  Makefile  cmake_install.cmake
src/: assets.h  mainMenu.h  renderer.h  uiObject.h
src/components/: renderable.h
src/scenes/: editor.h  runtime.h
